# threshold-key-bridge-prototype

./: Cargo.toml  README.md
data/: aux_info_party_0.json  aux_info_party_1.json  aux_info_party_2.json  aux_info_party_3.json  aux_info_party_4.json  incomplete_key_share_party_0.json  incomplete_key_share_party_1.json  incomplete_key_share_party_2.json  incomplete_key_share_party_3.json  incomplete_key_share_party_4.json  primes.txt  refreshed_portable_shares.json  refreshed_synedrion_shares.json  synedrion_aux_gen.json
src/: eth_utils.rs  main.rs  math.rs
src/bridge/: cggmp.rs  common.rs  core.rs  mod.rs  synedrion.rs
src/simulation/: cggmp.rs  common.rs  mod.rs  synedrion.rs
